especificos/cliente3.platformdemos.cloud/yaml/servicio.yaml
---
# Registro del Servicio.
apiVersion: v1
kind: Service
metadata:
  name: cliente3-servicio
  namespace: default
spec:
  type: NodePort
  selector:
    app: cliente3
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 31010
