especificos/cliente3.platformdemos.cloud/yaml/ingress.yaml
---
# Registro del Ingress que apunta al servicio (URL externa).
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: acceso-cliente3
  namespace: default
spec:
  rules:
    - host: cliente3.platformdemos.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: cliente3-servicio
              servicePort: 8080
